--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/homepage.css">
-    <title>Gastos Sintaceptes</title>
-</head>
-<body class="container">
-    <h1 class="titles">Gastos Sintaceptes</h1>
-    <div class="button-container">
-        <button onclick="agregarProducto()">Agregar Producto</button>
-        <button onclick="modificarProducto()">Modificar Producto</button>
-        <button onclick="verListado()">Ver Listado</button>
-        <button onclick="itinerarioCompras()">Itinerario de Compras</button>
-    </div>
-    <div> Listado de Productos:</div>
-    <ul id="listado"></ul>
 
-    <script src="./js/producto_funciones.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./src/css/homepage.css">
+  <title>Gastos Sintaceptes</title>
+</head>
+
+<body class="container">
+  <h1 class="titles">Gastos Sintaceptes</h1>
+  <div class="button-container">
+    <a href="./pages/add-product.html">
+      <button>Agregar Producto</button>
+    </a>
+    <button onclick="modificarProducto()">Modificar Producto</button>
+    <button onclick="verListado()">Ver Listado</button>
+    <button onclick="itinerarioCompras()">Itinerario de Compras</button>
+  </div>
+  <div> Listado de Productos:</div>
+  <ul id="listado"></ul>
+
+  <script src="./src/js/producto_funciones.js"></script>
 </body>
+
 </html>
