correccion de guardado

--- a/pages/add-product.html
+++ b/pages/add-product.html
@@ -36,7 +36,7 @@
                    placeholder="Costo Producto"
                    class="form-control">
 
-            <button type="submit" onclick="save()">Guardar</button>
+            <button type="button" onclick="save()">Guardar</button>
         </form>
     </div>
     <script src="../src/js/add-functions.js"></script>
