--- a/pages/add-product.html
+++ b/pages/add-product.html
@@ -2,44 +2,63 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/css/homepage.css">
-    <link rel="stylesheet" href="../src/css/add-product.css">
-    <title>Gastos Sintaceptes</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../src/css/homepage.css">
+  <link rel="stylesheet" href="../src/css/add-product.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <title>Gastos Sintaceptes</title>
 </head>
 
-<body>
-    <h1
-    class="titles">Agregar Productos</h1>
-    <div class="container">
-        <form submit="" class="formulario">
-            <input type="number"
-                   id="codigoBarras"
-                   placeholder="Codigo de barras"
-                   class="form-control">
-            <input type="text"
-                   id="nombreProducto"
-                   placeholder="Nombre Producto"
-                   class="form-control">
-            <textarea type="text"
-                   id="descripcionProducto"
-                   placeholder="Descripcion del producto"
-                   rows="4"
-                   class="form-control"></textarea>
-            <input type="number"
-                   id="precioProducto"
-                   placeholder="Precio Producto"
-                   class="form-control">
-            <input type="number"
-                   id="costoProducto"
-                   placeholder="Costo Producto"
-                   class="form-control">
+<body class="container">
+  <h1 class="titles m-5">Agregar Productos</h1>
 
-            <button type="button" onclick="save()">Guardar</button>
-        </form>
+  <form class="formulario">
+    <div class="form-floating mb-3">
+      <input type="number"
+        onfocus="true"
+        id="codigoBarras"
+        placeholder="Codigo de barras"
+        class="form-control mb-3">
+      <label for="codigoBarras">Codigo de barras</label>
     </div>
-    <script src="../src/js/add-functions.js"></script>
+    <div class="form-floating mb-3">
+      <input type="text"
+            id="nombreProducto"
+            placeholder="Nombre Producto"
+            class="form-control mb-3">
+      <label for="codigoBarras">Nombre Producto</label>
+    </div>
+    <div class="form-floating mb-3">
+      <textarea type="text"
+            id="descripcionProducto"
+            placeholder="Descripcion del producto"
+            class="form-control mb-3"></textarea>
+      <label for="codigoBarras">Descripcion del producto</label>
+    </div>
+    <div class="form-floating mb-3">
+      <input type="number"
+            id="precioProducto"
+            placeholder="Precio Producto"
+            class="form-control mb-3">
+      <label for="codigoBarras">Precio Producto</label>
+    </div>
+    <div class="form-floating mb-3">
+      <input type="number"
+            id="costoProducto"
+            placeholder="Costo Producto"
+            class="form-control mb-3">
+      <label for="codigoBarras">Costo Producto</label>
+    </div>
+    <button type="submit" class="btn btn-primary btn-lg mb-3" style="width: 100%;" onclick="save()">Guardar</button>
+  </form>
+  <div class="d-flex justify-content-center">
+    <a href="../index.html">
+      <button class="btn btn-info">Regresar</button>
+    </a>
+  </div>
+  <script src="../src/js/add-functions.js"></script>
 </body>
 
 </html>
