Listado, modificacion y eliminacion

--- a/pages/add-product.html
+++ b/pages/add-product.html
@@ -55,9 +55,13 @@
   </form>
   <div class="d-flex justify-content-center">
     <a href="../index.html">
-      <button class="btn btn-info">Regresar</button>
+      <button class="btn btn-info text-white">Regresar</button>
     </a>
   </div>
+
+  <footer class="d-flex justify-content-center">
+    © 2023 Sintaceptes. Todos los derechos reservados.
+  </footer>
   <script src="../src/js/add-functions.js"></script>
 </body>
 
