--- a/index.html
+++ b/index.html
@@ -5,21 +5,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./src/css/homepage.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <title>Gastos Sintaceptes</title>
 </head>
 
 <body class="container">
-  <h1 class="titles">Gastos Sintaceptes</h1>
-  <div class="button-container">
+  <h1 class="titles m-5">Gastos Sintaceptes</h1>
+  <div class="d-flex justify-content-around">
     <a href="./pages/add-product.html">
-      <button>Agregar Producto</button>
+      <button class="btn btn-outline-primary">Agregar Producto</button>
     </a>
-    <button onclick="modificarProducto()">Modificar Producto</button>
-    <button onclick="verListado()">Ver Listado</button>
-    <button onclick="itinerarioCompras()">Itinerario de Compras</button>
+    <a href="./pages/list-products.html">
+      <button class="btn btn-outline-primary">Listado de productos</button>
+    </a>
+    <!-- <button class="btn btn-outline-primary" onclick="modificarProducto()">Modificar Producto</button> -->
+    <!-- <button class="btn btn-outline-primary" onclick="verListado()">Listado de productos</button> -->
+    <button class="btn btn-outline-primary" onclick="itinerarioCompras()">Itinerario de Compras</button>
   </div>
-  <div> Listado de Productos:</div>
-  <ul id="listado"></ul>
+  <!-- <div> Listado de Productos:</div> -->
+  <!-- <ul id="listado"></ul> -->
+
+  <div class="titles m-5">
+    <h3>Información del sistema</h3>
+
+    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, recusandae? Minus repellendus nesciunt a, ex temporibus dolorem praesentium quod eius mollitia voluptate illum iste pariatur exercitationem earum debitis magnam totam.</p>
+    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, recusandae? Minus repellendus nesciunt a, ex temporibus dolorem praesentium quod eius mollitia voluptate illum iste pariatur exercitationem earum debitis magnam totam.</p>
+    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, recusandae? Minus repellendus nesciunt a, ex temporibus dolorem praesentium quod eius mollitia voluptate illum iste pariatur exercitationem earum debitis magnam totam.</p>
+    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, recusandae? Minus repellendus nesciunt a, ex temporibus dolorem praesentium quod eius mollitia voluptate illum iste pariatur exercitationem earum debitis magnam totam.</p>
+  </div>
+
+  <footer class="d-flex justify-content-center">
+    © 2023 Sintaceptes. Todos los derechos reservados.
+  </footer>
 
   <script src="./src/js/producto_funciones.js"></script>
 </body>
